--- a/Math.cls
+++ b/Math.cls
@@ -10,7 +10,7 @@ Attribute VB_Name = "Math"
 Attribute VB_GlobalNameSpace = False
 Attribute VB_Creatable = False
 Attribute VB_PredeclaredId = False
-Attribute VB_Exposed = False
+Attribute VB_Exposed = True
 Option Explicit
 ' Original code made by Elroy Sullivan, PhD (User in VbForums)
 ' Was a module and now is a Class, by George Karras
@@ -18,7 +18,7 @@ Option Explicit
 ' We can't pass UDT from M2000 script but we can pass a pointer to memory
 ' which we make using Buffer statement, and using Structure we can create offsets too.
 Private mcheck As Boolean
-Private Declare Sub CopyMemory Lib "KERNEL32" Alias "RtlMoveMemory" ( _
+Private Declare Sub CopyMemory Lib "kernel32" Alias "RtlMoveMemory" ( _
   ByVal lpvDest As Long, ByVal lpvSource As Long, ByVal cbCopy As Long)
 Private Const Pi = 3.14159265358979
 Private Const pihalf = 1.5707963267949
@@ -1484,8 +1484,29 @@ End Function
 Sub TestStr(a$)
 a$ = a$ + "ok"
 End Sub
+Sub testStrArr(a() As Byte)
+Dim b$
+b$ = a()
+Debug.Print b$
+End Sub
+Function RetStrArr() As Byte()
+Dim b() As Byte
+b() = "ok"
+
+RetStrArr = b()
+End Function
 Sub TestValue(a)
-a = a + 1
+Dim b As Long
+b = a
+b = b + 1
+a = b
+End Sub
+Sub TestArr(a() As Variant)
+On Error GoTo there
+If UBound(a()) - LBound(a()) = 0 Then Exit Sub
+a(LBound(a)) = 100
+ReDim Preserve a(20 - 1)
+there:
 End Sub
 Sub TestObj(a)
 Dim z As mArray, m As mArray
